--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ war/WEB-INF/classes/*
 war/WEB-INF/deploy/*
 war/felyneobomb/*
 war/sprites/ori
-*/gwt-unitCache/*
+gwt-unitCache/*
 # Package Files #
 *.jar
 *.war
